# procsynth

./: Cargo.toml  README.md  example_config.json
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: events.rs  lib.rs  melody.rs
docs/: algorithms.md  ideas.md  model.md  presets.md
